--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "firebase": "^8.2.10",
     "next": "^10.0.7",
     "react": "17.0.1",
+    "react-credit-cards": "^0.8.3",
     "react-dom": "17.0.1",
     "sass": "^1.32.7"
   },
