--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "test": "jest"
   },
   "dependencies": {
     "babel-register": "^6.26.0",
     "dotenv-webpack": "^7.0.2",
     "firebase": "^8.2.10",
+    "identity-obj-proxy": "^3.0.0",
     "next": "^10.0.7",
     "react": "17.0.1",
     "react-credit-cards": "^0.8.3",
@@ -18,8 +20,18 @@
     "sass": "^1.32.7"
   },
   "devDependencies": {
+    "@babel/core": "^7.11.4",
+    "@types/jest": "^26.0.23",
     "@types/node": "^14.14.28",
     "@types/react": "^17.0.2",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.1",
+    "babel-jest": "^26.3.0",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
+    "eslint": "^7.7.0",
+    "eslint-plugin-react": "^7.20.6",
+    "jest": "^26.4.2",
+    "jest-enzyme": "^7.1.2",
     "typescript": "^4.1.5"
   }
 }
