--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "babel-register": "^6.26.0",
+    "dotenv": "^9.0.2",
     "firebase": "^8.2.10",
     "identity-obj-proxy": "^3.0.0",
     "next": "^10.0.7",
