--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "test": "jest"
+    "test": "jest",
+    "test:coverage": "jest --coverage"
   },
   "dependencies": {
     "babel-register": "^6.26.0",
@@ -31,6 +32,7 @@
     "enzyme-adapter-react-16": "^1.15.2",
     "eslint": "^7.7.0",
     "eslint-plugin-react": "^7.20.6",
+    "firestore-jest-mock": "^0.13.0",
     "jest": "^26.6.3",
     "jest-enzyme": "^7.1.2",
     "typescript": "^4.1.5"
