--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "test": "jest",
-    "test:coverage": "test --coverage"
+    "test:coverage": "jest --coverage"
   },
   "dependencies": {
     "babel-register": "^6.26.0",
